# health-agent

./: .env.example  .gitattributes  .gitignore  AGENTS.b64  AGENTS.md  CODEX.md  CODEX_BOOTSTRAP_PROMPT.md  DATA_SOURCES.md  LICENSE_NOTES.md  MEDICAL_DISCLAIMER.md  Plan.md  README.md  Readme.md  b.txt  pyproject.toml  source.b64  zz2.txt
.github/workflows/: ci.yml
artifacts/e2e-orchestration-eval/: blinded_input_100.jsonl  blinded_input_manifest.json
configs/: default.toml
docs/: architecture.md  competition-pipeline.md  e2e-orchestration-eval.md  evaluation-plan.md  llm-eval.md  research-roadmap.md
schemas/: gpt_e2e_teacher_label.schema.json  gpt_e2e_teacher_label_v2.schema.json
scripts/: assert_agent_workspace_clean.py  build_agent_eval_workspace.py  build_gpt_e2e_teacher_final_v2.py  build_gpt_e2e_teacher_requests.py  build_retrieval_candidates.py  build_submission_report.py  collect_trials.py  combine_gpt_e2e_teacher_labels.py  evaluate_hidden_e2e_predictions.py  generate_synthetic_patients.py  ingest_gpt_e2e_teacher_response.py  prepare_hidden_e2e_eval.py  run_competition_pipeline.py  run_demo.py  run_e2e_orchestration_v2.py  run_exaone_e2e_orchestration.py  run_llm_eval.py  run_solar_e2e_orchestration.py  run_teacher_student_eval.py  validate_submission_artifact.py
tests/: __init__.py  test_competition_example.py  test_competition_pipeline.py  test_e2e_orchestration_v2.py  test_exaone_e2e.py  test_gpt_e2e_teacher_artifact.py  test_gpt_e2e_teacher_artifact_v2.py  test_llm_integration.py  test_pipeline.py  test_solar_e2e.py  test_teacher_student.py
(+142 files in other folders)
